Stop Anim button does not appear in Info panel in Main Window if animation was started in other window #72194

Closed
opened 2019-12-05 10:56:18 +01:00 by item412 · 7 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20

Blender Version
Broken: version: 2.82 (sub 3), branch: master, commit date: 2019-12-05 09:23, hash: 6ba09f8515
Worked: (optional)

Exact steps for others to reproduce the error

  1. Start Blender
  2. Create New Window
  3. In created window click Play Animation
**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20 **Blender Version** Broken: version: 2.82 (sub 3), branch: master, commit date: 2019-12-05 09:23, hash: `6ba09f8515` Worked: (optional) **Exact steps for others to reproduce the error** 1. Start Blender 2. Create New Window 3. In created window click Play Animation
Author

Added subscriber: @item412

Added subscriber: @item412

Added subscribers: @JulianEisel, @mano-wii

Added subscribers: @JulianEisel, @mano-wii

I imagine you refer to this button: image.png
@JulianEisel, is that supposed to allways appear when play animation?

I imagine you refer to this button: ![image.png](https://archive.blender.org/developer/F8193581/image.png) @JulianEisel, is that supposed to allways appear when play animation?

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 25cb12dc71

This issue was referenced by 25cb12dc71e83a331d31568f33ecd6315c5605fa
Member

By design animation-playback managed per screen (read: screen-layout). This is how it was since a long time.
Now when introducing workspaces for 2.8 it was considered to move that to the workspace instead, but no decision was taken and we simply kept the old design working.
So in strict words, this isn't a bug, everything is working as intended.

Anyway, I see nothing wrong with showing the button in all status-bars now.

By design animation-playback managed per screen (read: screen-layout). This is how it was since a long time. Now when introducing workspaces for 2.8 it was considered to move that to the workspace instead, but no decision was taken and we simply kept the old design working. So in strict words, this isn't a bug, everything is working as intended. Anyway, I see nothing wrong with showing the button in all status-bars now.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-01-16 11:58:50 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72194
No description provided.